...
                                    getListView(chapter: chapters[index])
                                }
                                .buttonStyle(.plain)
                            }
                        }
                    }
                    .accessibilityIdentifier("list")
                case .loading:
                    LoadingView()
                case .verseLoaded(let verse):
                    ScrollView {
                        VStack(alignment: .leading, spacing: 10) {
                            ForEach(0..<verse.count,id:\.self) { index in
...
                                    getVerseListView(verse: verse[index])
                                }
                                .buttonStyle(.plain)
                            }
                        }
                    }
                    .accessibilityIdentifier("verseList")
                }
            }
            .padding(.top , 20)
            .padding(.horizontal , 20)
        }
        .ignoresSafeArea()
...
